--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ h2 {
 }
 
 .site-footer {
-  background-image: linear-gradient(to right, #37bfdd, #8d8c6b, #117615);
+  background-image: linear-gradient(to right, #d0b368, #928d2d, #988f0a);
   padding: 20px 0;
   margin-top: 2rem;
 }
@@ -51,7 +51,7 @@ h2 {
 
 .navbar-dark {
   background-color: #49a251;
-  background-image: linear-gradient(to right, #37bfdd, #8d8c6b, #117615);
+  background-image: linear-gradient(to right, #d0b368, #928d2d, #988f0a);
   margin-bottom: 2rem;
   min-height: 8rem;
 }
