--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,36 @@ h2 {
   opacity: 0;
   transition: 300ms ease-in;
 }
+
+/* LOADING */
+
+.loading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.loading-spinner {
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin .75s linear infinite;
+}
+
+.loading-text {
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
